--- a/index.html
+++ b/index.html
@@ -17,3 +17,20 @@
 </html>
 
 
+<hr>
+
+<h3>Directions from Maryville to Newyork city,Statue of liberty</h3>
+
+<ol>
+<li> From Missouri to newyork by car </li>
+<li> trip begins in the state of Missouri. It ends in the state of New York </li>
+<li>total driving distance from Missouri to New York is 1,115 miles or 1 794 kilometers</li>
+<li> U can also take plane from kansas city to Newyork.</li>
+<li>Start at Maryville,wallmart and go staraight to kansas city</li>
+<li>book a flight ticket and take a boarding pass</li>
+<li>get into the plane and have an nap </li>
+   
+   
+
+</ol>
+
