--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
 <li> U can also take plane from kansas city to Newyork.</li>
 <li>Start at Maryville,wallmart and go staraight to kansas city</li>
 <li>book a flight ticket and take a boarding pass</li>
-<li>get into the plane and have an nap </li>
-   
-   
+<li>get into the plane and have an nap 
+    <ul>
+        <li> have Backpacks, strollers for kids</li>
+        <li> take big umberellas</li>
+        <li>  A camera to take pics</li>
+        <li> All the above items are not allowed at the Statue of liberty location</li>
+        <li> Don't forget to take id for sure.</li>
+        <li> Minors are not required to take any id</li>
 
+    </ul>
+</li>
 </ol>
 
